fix: fix border radius/overflow in PicCard.

--- a/src/components/PicCard.module.scss
+++ b/src/components/PicCard.module.scss
@@ -4,6 +4,7 @@
   position: relative;
   border-radius: 12px;
   overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 
   img {
     width: 100%;
